<resources>
    <string name="app_name">DianUX</string>
    <string name="sort_by">Sort by %1$s</string>
    <string name="submit">Submit</string>
    <string name="input">Input</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="backup">Backup</string>
    <string name="data">data</string>
    <string name="databases">databases</string>
    <string name="space">\u0020</string>
    <string name="dash">-</string>
    <string name="items_per_page">Items per page %1$s %2$s</string>
    <string name="playtext_store">Store</string>
    <string name="author">Author</string>
    <string name="price">Price</string>
    <string name="splitter">Splitter</string>
    <string name="tags">Tags</string>
    <string name="language">Language</string>

</resources>
