<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_texts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="8dp"


        android:layout_marginBottom="5dp"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="4dp"
        card_view:cardPreventCornerOverlap="true">


        <!--


          <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:layout_gravity">top</item>
        <item name="android:layout_marginLeft">8dp</item>

        <item name="android:layout_marginRight">8dp</item>
        <item name="cardCornerRadius">@dimen/card_album_radius</item>
        <item name="cardElevation">4dp</item>
        <item name="cardUseCompatPadding">true</item>
        <item name="cardPreventCornerOverlap">true</item>
        <item name="android:clickable">false</item>











        -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:weightSum="5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    card_view:srcCompat="@drawable/ic_new" />

                <TextView
                    android:id="@+id/chapter_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="4"


                    android:gravity="left|center"
                    android:singleLine="false"
                    android:text="Books"
                    android:textSize="21sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/language" />

                    <TextView
                        android:id="@+id/chapter_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="5dp"
                        android:text="@string/language"
                        android:textSize="@dimen/info_text_size" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/author" />


                    <TextView
                        android:id="@+id/chapter_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="5dp"
                        android:text="@string/author"
                        android:textSize="@dimen/info_text_size" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center"
                        android:text="@string/price"
                        android:textSize="@dimen/info_text_size" />

                    <TextView
                        android:id="@+id/chapter_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center"
                        android:paddingLeft="5dp"
                        android:text="@string/price"
                        android:textSize="@dimen/info_text_size" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/tags" />

                    <TextView
                        android:id="@+id/chapter_tags"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="5dp"
                        android:singleLine="false"
                        android:text="@string/tags"
                        android:textSize="@dimen/info_text_size" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/splitter" />

                    <TextView
                        android:id="@+id/chapter_splitter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="5dp"
                        android:text="@string/splitter"
                        android:textSize="@dimen/info_text_size" />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>